--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欧阳玉冰的博客</title>
     <link href="https://easyreadfs.nosdn.127.net/fe/style.e67ba4415e9028d6e556e2b0f5c74353.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../asset/style.css">
+    <link rel="stylesheet" href="./asset/style.css">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
         <li class="left"><a href="/">分类</a></li>
         <li class="left"><a href="/">归档</a></li>
         <li class="left"><a href="/">搜索</a></li>
-        <li class="left" id="github"><a href="https://github.com/"><img class="github" src="../asset/img/github.png"
+        <li class="left" id="github"><a href="https://github.com/"><img class="github" src="./asset/img/github.png"
                     alt="github"></a></li>
-        <li class="left" id="gitee"><a href="https://gitee.com"><img class="gitee" src="../asset/img/gitee.png"
+        <li class="left" id="gitee"><a href="https://gitee.com"><img class="gitee" src="./asset/img/gitee.png"
                     alt="gitee"></a></li>
     </ol>
     <!-- 博文界面 -->
