--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 侧边栏 -->
     <ol id="nav">
         <li class="left"><a href="/"><img
-                    src="https://avaimg.lf127.net/img/0346bc9f0c5fedd4/c3lYalcwSHFUVUU3SUdpZjlHR3BmdnRmUmZlYUNRRlYvclRkR0puaDlaZz0.jpg?imageView&thumbnail=96x96&quality=90&type=jpg"></a>
+                    src="/asset/img/avatar.jpg"></a>
         </li>
         <li class="left"><a href="/">欧阳玉冰</a></li>
         <li id="left-text">若志不强毅，意不慷慨，徒碌碌滞于俗，默默束于情，永窜伏于凡庸，不免于下流矣。</li>
