--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <!-- 侧边栏 -->
     <ol id="nav">
-        <li class="left"><a href="/"><img
-                    src="/asset/img/avatar.jpg"></a>
+        <li class="left">
+            <a href="/">
+            <img src="/asset/img/avatar.jpg">
+            </a>
         </li>
         <li class="left"><a href="/">欧阳玉冰</a></li>
         <li id="left-text">若志不强毅，意不慷慨，徒碌碌滞于俗，默默束于情，永窜伏于凡庸，不免于下流矣。</li>
