添加了图标

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>欧阳玉冰的博客</title>
+    <link rel="shortcut icon" href="/asset/img/blog.ico" type="image/x-icon">
     <link href="https://easyreadfs.nosdn.127.net/fe/style.e67ba4415e9028d6e556e2b0f5c74353.css" rel="stylesheet" />
     <link rel="stylesheet" href="./asset/style.css">
 </head>
