修改图片显示问题

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ol id="nav">
         <li class="left">
             <a href="/">
-            <img src="/asset/img/avatar.jpg">
+                <img src="/asset/img/avatar.jpg">
             </a>
         </li>
         <li class="left"><a href="/">欧阳玉冰</a></li>
@@ -140,8 +140,7 @@
                             <span>发布在</span>
                             <a href="/">绘画作品</a>
                         </div>
-                        <img src="https://imglf4.lf127.net/img/9f8959bb63eafc79/c3lYalcwSHFUVUVQLzE0WmNBNmd5RFJlR09UL1RlSzhJd1d2ZkE5UmczTT0.jpg?imageView&thumbnail=500x0&quality=96&stripmeta=0&type=jpg%7Cwatermark&type=2&text=wqkg5Y2K5pel6ZeyeGlhbiAvIHdzYnJ4LmxvZnRlci5jb20=&font=bXN5aA==&gravity=southwest&dissolve=30&fontsize=240&dx=8&dy=10&stripmeta=0"
-                            alt="作品" />
+                        <img src="/asset/img/captain.jpg" alt="作品" />
                         <p> <a href="/">阅读全文</a>
                         </p>
                     </li>
